# shruggingface

./: .gitignore  Makefile  pyproject.toml
src/shruggingface/: cli.py  env.py  pack.py  push.py
