[tool.poetry]
name = "shruggingface"
version = "0.1.1"
description = "back up and restore huggingface models"
authors = ["Gareth Davidson <gaz@bitplane.net>"]
license = "Public Domain" # WTFPL but pypi don't like it
readme = "README"
packages = [{ include = "shruggingface", from ="src" }]


[tool.poetry.urls]
Homepage = "https://bitplane.net/dev/python/shruggingface"
Repository = "https://github.com/bitplane/shruggingface"
Bug Tracker = "https://github.com/bitplane/shruggingface/issues"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"

[tool.poetry.dev-dependencies]
internetarchive = "^2.0"
black = "^23.0"
flake8 = "^6.0"
pytest = "^7.0"
build = "^1.2"
twine = "^6.0"

[tool.poetry.scripts]
shruggingface = "shruggingface.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

